webpack html 插件

--- a/example/main.html
+++ b/example/main.html
@@ -7,11 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="stylesheet" href="/build/style.css"/>
-</head>
+<link href="/build/style.css" rel="stylesheet"></head>
 <body>
 <div id="content">
 </div>
-<script type="text/javascript" src="/build/qianmi-app-2725b7393d67a2356ee0.js"></script>
-</body>
+<script type="text/javascript" src="/build/qianmi-app-edb60c20e291a6969cff.js"></script></body>
 </html>
